--- a/dev-ruby/actionmailer/ChangeLog
+++ b/dev-ruby/actionmailer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/actionmailer
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionmailer/ChangeLog,v 1.116 2009/10/04 12:59:33 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionmailer/ChangeLog,v 1.117 2009/10/07 19:05:23 maekke Exp $
+
+  07 Oct 2009; Markus Meier <maekke@gentoo.org> actionmailer-2.2.3.ebuild:
+  amd64 stable, bug #283396
 
   04 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
   actionmailer-2.2.3.ebuild:
