--- a/dev-perl/Log-Log4perl/ChangeLog
+++ b/dev-perl/Log-Log4perl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Log-Log4perl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Log-Log4perl/ChangeLog,v 1.55 2009/09/29 08:22:50 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Log-Log4perl/ChangeLog,v 1.56 2009/10/07 23:07:33 tcunha Exp $
+
+  07 Oct 2009; Tiago Cunha <tcunha@gentoo.org> Log-Log4perl-1.24.ebuild:
+  stable sparc, bug 283969
 
 *Log-Log4perl-1.25 (29 Sep 2009)
 
