--- a/x11-themes/gtk-engines/ChangeLog
+++ b/x11-themes/gtk-engines/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/gtk-engines
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines/ChangeLog,v 1.148 2009/09/23 09:23:09 mrpouet Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines/ChangeLog,v 1.149 2009/10/08 02:58:07 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org> gtk-engines-2.18.3.ebuild:
+  Stable on amd64, bug #281427
 
 *gtk-engines-2.18.3 (23 Sep 2009)
 
