--- a/x11-libs/gtksourceview/ChangeLog
+++ b/x11-libs/gtksourceview/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/gtksourceview
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.160 2009/05/17 19:53:57 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.161 2009/10/08 03:02:36 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org>
+  gtksourceview-2.6.2.ebuild:
+  Stable on amd64, bug #281427
 
 *gtksourceview-2.6.2 (17 May 2009)
 
