--- a/net-misc/vinagre/ChangeLog
+++ b/net-misc/vinagre/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/vinagre
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/vinagre/ChangeLog,v 1.40 2009/05/22 22:45:29 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/vinagre/ChangeLog,v 1.41 2009/10/08 03:10:07 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org> vinagre-2.26.2.ebuild:
+  Stable on amd64, bug #281427
 
 *vinagre-2.26.2 (22 May 2009)
 
