--- a/dev-python/gnome-desktop-python/ChangeLog
+++ b/dev-python/gnome-desktop-python/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/gnome-desktop-python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/gnome-desktop-python/ChangeLog,v 1.17 2009/05/10 21:53:41 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/gnome-desktop-python/ChangeLog,v 1.18 2009/10/08 03:08:25 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org>
+  gnome-desktop-python-2.26.0.ebuild:
+  Stable on amd64, bug #281427
 
 *gnome-desktop-python-2.26.0 (10 May 2009)
 
