--- a/dev-python/gtksourceview-python/ChangeLog
+++ b/dev-python/gtksourceview-python/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/gtksourceview-python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/gtksourceview-python/Attic/ChangeLog,v 1.18 2009/05/10 21:41:55 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/gtksourceview-python/Attic/ChangeLog,v 1.19 2009/10/08 03:23:20 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org>
+  gtksourceview-python-2.26.0.ebuild:
+  Stable on amd64, bug #281427
 
 *gtksourceview-python-2.26.0 (10 May 2009)
 
