--- a/app-admin/pessulus/ChangeLog
+++ b/app-admin/pessulus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/pessulus
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/pessulus/ChangeLog,v 1.64 2009/07/16 20:53:06 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/pessulus/ChangeLog,v 1.65 2009/10/08 03:29:20 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org> pessulus-2.26.2.ebuild:
+  Stable on amd64, bug #281427
 
 *pessulus-2.26.2 (16 Jul 2009)
 
