--- a/gnome-base/libgnomecanvas/ChangeLog
+++ b/gnome-base/libgnomecanvas/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/libgnomecanvas
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.111 2009/05/10 18:39:15 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.112 2009/10/08 03:12:23 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org>
+  libgnomecanvas-2.26.0.ebuild:
+  Stable on amd64, bug #281427
 
 *libgnomecanvas-2.26.0 (10 May 2009)
 
