--- a/gnome-extra/evolution-webcal/ChangeLog
+++ b/gnome-extra/evolution-webcal/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/evolution-webcal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-webcal/ChangeLog,v 1.101 2009/05/23 22:16:22 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-webcal/ChangeLog,v 1.102 2009/10/08 03:20:59 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org>
+  evolution-webcal-2.26.0.ebuild:
+  Stable on amd64, bug #281427
 
 *evolution-webcal-2.26.0 (23 May 2009)
 
