--- a/gnome-extra/gnome-system-monitor/ChangeLog
+++ b/gnome-extra/gnome-system-monitor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-system-monitor
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-system-monitor/ChangeLog,v 1.194 2009/05/25 23:21:43 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-system-monitor/ChangeLog,v 1.195 2009/10/08 03:21:42 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org>
+  gnome-system-monitor-2.26.2.ebuild:
+  Stable on amd64, bug #281427
 
   25 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
   gnome-system-monitor-2.26.2.ebuild:
