--- a/gnome-extra/yelp/ChangeLog
+++ b/gnome-extra/yelp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/yelp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.216 2009/09/10 20:43:14 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.217 2009/10/08 03:06:37 tester Exp $
+
+  08 Oct 2009; Olivier Crête <tester@gentoo.org> yelp-2.26.0.ebuild:
+  Stable on amd64, bug #281427
 
   10 Sep 2009; Gilles Dartiguelongue <eva@gentoo.org> yelp-2.24.0.ebuild,
   yelp-2.24.0-r10.ebuild, yelp-2.26.0.ebuild:
