--- a/dev-ruby/actionpack/ChangeLog
+++ b/dev-ruby/actionpack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/actionpack
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.123 2009/10/07 19:04:07 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.124 2009/10/08 17:58:35 armin76 Exp $
+
+  08 Oct 2009; Raúl Porcel <armin76@gentoo.org> actionpack-2.2.3.ebuild:
+  ia64/sparc stable wrt #283396
 
   07 Oct 2009; Markus Meier <maekke@gentoo.org> actionpack-2.2.3.ebuild:
   amd64 stable, bug #283396
