--- a/dev-ruby/activerecord/ChangeLog
+++ b/dev-ruby/activerecord/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activerecord
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.114 2009/10/07 18:59:00 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.115 2009/10/08 17:56:10 armin76 Exp $
+
+  08 Oct 2009; Raúl Porcel <armin76@gentoo.org> activerecord-2.2.3.ebuild:
+  ia64/sparc stable wrt #283396
 
   07 Oct 2009; Markus Meier <maekke@gentoo.org> activerecord-2.2.3.ebuild:
   amd64 stable, bug #283396
