--- a/dev-ruby/activesupport/ChangeLog
+++ b/dev-ruby/activesupport/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activesupport
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.99 2009/10/07 18:57:30 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.100 2009/10/08 17:55:22 armin76 Exp $
+
+  08 Oct 2009; Raúl Porcel <armin76@gentoo.org> activesupport-2.2.3.ebuild:
+  ia64/sparc stable wrt #283396
 
   07 Oct 2009; Markus Meier <maekke@gentoo.org> activesupport-2.2.3.ebuild:
   amd64 stable, bug #283396
