--- a/app-crypt/johntheripper/ChangeLog
+++ b/app-crypt/johntheripper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/johntheripper
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.100 2009/10/03 22:54:22 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.101 2009/10/08 21:57:35 rich0 Exp $
+
+  08 Oct 2009; Richard Freeman <rich0@gentoo.org>
+  johntheripper-1.7.3.1-r1.ebuild:
+  amd64 stable - 287932
 
 *johntheripper-1.7.3.4 (04 Oct 2009)
 
