--- a/media-libs/jpeg/ChangeLog
+++ b/media-libs/jpeg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/jpeg
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.83 2009/10/05 21:07:19 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.84 2009/10/08 22:01:01 maekke Exp $
+
+  08 Oct 2009; Markus Meier <maekke@gentoo.org> jpeg-7.ebuild:
+  arm stable, bug #285598
 
   05 Oct 2009; Markus Meier <maekke@gentoo.org> jpeg-7.ebuild:
   x86 stable, bug #285598
