--- a/media-gfx/pqiv/ChangeLog
+++ b/media-gfx/pqiv/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/pqiv
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/pqiv/ChangeLog,v 1.21 2009/05/06 10:32:28 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/pqiv/ChangeLog,v 1.22 2009/10/09 07:53:38 ssuominen Exp $
+
+*pqiv-0.10 (09 Oct 2009)
+
+  09 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> +pqiv-0.10.ebuild:
+  Version bump.
 
 *pqiv-0.9 (06 May 2009)
 
