--- a/x11-misc/gbdfed/ChangeLog
+++ b/x11-misc/gbdfed/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/gbdfed
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/gbdfed/ChangeLog,v 1.3 2009/08/08 12:55:52 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/gbdfed/ChangeLog,v 1.4 2009/10/09 08:17:15 pva Exp $
+
+*gbdfed-1.5 (09 Oct 2009)
+
+  09 Oct 2009; Peter Volkov <pva@gentoo.org> +gbdfed-1.5.ebuild:
+  Version bump.
 
   08 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> gbdfed-1.4.ebuild,
   +files/gbdfed-1.4-glibc-2.10.patch:
