--- a/app-shells/bash-completion/ChangeLog
+++ b/app-shells/bash-completion/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/bash-completion
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.191 2009/10/03 16:51:00 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.192 2009/10/09 16:43:49 armin76 Exp $
+
+  09 Oct 2009; Raúl Porcel <armin76@gentoo.org>
+  bash-completion-1.0-r5.ebuild:
+  ia64/s390 stable wrt #270008
 
   03 Oct 2009; Markus Meier <maekke@gentoo.org>
   bash-completion-1.0-r5.ebuild:
