--- a/x11-apps/fslsfonts/ChangeLog
+++ b/x11-apps/fslsfonts/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/fslsfonts
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/fslsfonts/ChangeLog,v 1.21 2009/06/05 17:15:07 tcunha Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/fslsfonts/ChangeLog,v 1.22 2009/10/09 20:23:07 maekke Exp $
+
+  09 Oct 2009; Markus Meier <maekke@gentoo.org> fslsfonts-1.0.2.ebuild:
+  arm stable, bug #282290
 
   05 Jun 2009; Tiago Cunha <tcunha@gentoo.org> fslsfonts-1.0.2.ebuild:
   stable sparc, bug 268581
