--- a/x11-apps/luit/ChangeLog
+++ b/x11-apps/luit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/luit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/luit/ChangeLog,v 1.42 2009/10/03 11:22:39 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/luit/ChangeLog,v 1.43 2009/10/09 20:26:00 maekke Exp $
+
+  09 Oct 2009; Markus Meier <maekke@gentoo.org> luit-1.0.3.ebuild:
+  arm stable, bug #282290
 
 *luit-1.0.4 (03 Oct 2009)
 
