--- a/x11-apps/x11perf/ChangeLog
+++ b/x11-apps/x11perf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/x11perf
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/x11perf/ChangeLog,v 1.35 2009/06/23 20:50:45 klausman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/x11perf/ChangeLog,v 1.36 2009/10/09 20:41:26 maekke Exp $
+
+  09 Oct 2009; Markus Meier <maekke@gentoo.org> x11perf-1.5.ebuild:
+  arm stable, bug #282290
 
   23 Jun 2009; Tobias Klausmann <klausman@gentoo.org> x11perf-1.5.ebuild:
   Stable on alpha for xorg-server-1.5/xorg-x11-7.4
