--- a/x11-base/xorg-drivers/ChangeLog
+++ b/x11-base/xorg-drivers/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-base/xorg-drivers
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.4 2009/10/05 12:26:44 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.5 2009/10/09 21:10:53 maekke Exp $
+
+  09 Oct 2009; Markus Meier <maekke@gentoo.org> xorg-drivers-1.6.ebuild:
+  arm stable, bug #282290
 
   05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
   xorg-drivers-1.6.ebuild:
