--- a/x11-drivers/xf86-video-sisusb/ChangeLog
+++ b/x11-drivers/xf86-video-sisusb/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-sisusb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-sisusb/ChangeLog,v 1.40 2009/10/05 14:16:44 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-sisusb/ChangeLog,v 1.41 2009/10/09 21:35:52 maekke Exp $
+
+  09 Oct 2009; Markus Meier <maekke@gentoo.org>
+  xf86-video-sisusb-0.9.3.ebuild:
+  arm stable, bug #282290
 
   05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
   xf86-video-sisusb-0.9.3.ebuild:
