--- a/x11-proto/fontsproto/ChangeLog
+++ b/x11-proto/fontsproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/fontsproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/fontsproto/ChangeLog,v 1.30 2009/10/05 15:41:28 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/fontsproto/ChangeLog,v 1.31 2009/10/09 22:02:33 maekke Exp $
+
+  09 Oct 2009; Markus Meier <maekke@gentoo.org> fontsproto-2.1.0.ebuild:
+  arm stable, bug #282290
 
   05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
   fontsproto-2.1.0.ebuild:
