--- a/x11-apps/xbacklight/ChangeLog
+++ b/x11-apps/xbacklight/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xbacklight
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xbacklight/ChangeLog,v 1.16 2009/10/03 11:28:56 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xbacklight/ChangeLog,v 1.17 2009/10/09 22:12:26 maekke Exp $
+
+  09 Oct 2009; Markus Meier <maekke@gentoo.org> xbacklight-1.1.ebuild:
+  arm stable, bug #282290
 
 *xbacklight-1.1.1 (03 Oct 2009)
 
