--- a/dev-java/easyneurons/ChangeLog
+++ b/dev-java/easyneurons/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/easyneurons
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/easyneurons/ChangeLog,v 1.3 2009/09/06 08:46:09 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/easyneurons/ChangeLog,v 1.4 2009/10/10 05:14:29 ali_bush Exp $
+
+*easyneurons-2.3 (10 Oct 2009)
+
+  10 Oct 2009; Alistair Bush <ali_bush@gentoo.org> +easyneurons-2.3.ebuild:
+  Version Bump.
 
   06 Sep 2009; Markus Meier <maekke@gentoo.org> easyneurons-2.2.ebuild:
   amd64 stable, bug #280654
