--- a/media-libs/faad2/ChangeLog
+++ b/media-libs/faad2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/faad2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/faad2/ChangeLog,v 1.128 2009/09/21 21:37:45 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/faad2/ChangeLog,v 1.129 2009/10/10 16:03:45 armin76 Exp $
+
+  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> faad2-2.7.ebuild:
+  ia64/sh/sparc stable wrt #278483
 
   21 Sep 2009; Markus Meier <maekke@gentoo.org> faad2-2.7.ebuild:
   arm stable, bug #278483
