--- a/kde-misc/krusader/ChangeLog
+++ b/kde-misc/krusader/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-misc/krusader
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/krusader/ChangeLog,v 1.91 2009/06/13 11:31:02 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/krusader/ChangeLog,v 1.92 2009/10/10 17:16:10 ssuominen Exp $
+
+  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  krusader-2.0.0-r1.ebuild:
+  amd64 stable wrt #288459
 
   13 Jun 2009; Tomáš Chvátal <scarabeus@gentoo.org>
   files/1.90.0-icon-overlay.patch:
