--- a/games-fps/quake3-defrag/ChangeLog
+++ b/games-fps/quake3-defrag/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/quake3-defrag
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/quake3-defrag/ChangeLog,v 1.8 2009/10/07 00:14:24 nyhm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/quake3-defrag/ChangeLog,v 1.9 2009/10/10 17:26:29 nyhm Exp $
+
+  10 Oct 2009; Tristan Heaven <nyhm@gentoo.org>
+  quake3-defrag-1.91.08-r1.ebuild:
+  Stable on amd64/x86
 
   07 Oct 2009; Tristan Heaven <nyhm@gentoo.org>
   quake3-defrag-1.91.08-r1.ebuild:
