--- a/games-fps/quake3-ra3/ChangeLog
+++ b/games-fps/quake3-ra3/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/quake3-ra3
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/quake3-ra3/ChangeLog,v 1.8 2009/10/07 03:36:56 nyhm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/quake3-ra3/ChangeLog,v 1.9 2009/10/10 17:28:56 nyhm Exp $
+
+  10 Oct 2009; Tristan Heaven <nyhm@gentoo.org> quake3-ra3-1.76-r1.ebuild:
+  Stable on amd64/x86
 
   07 Oct 2009; Tristan Heaven <nyhm@gentoo.org> quake3-ra3-1.76-r1.ebuild:
   EAPI=2; update SRC_URI and remove RESTRICT=fetch
