--- a/net-misc/openvpn/ChangeLog
+++ b/net-misc/openvpn/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/openvpn
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/openvpn/ChangeLog,v 1.166 2009/10/10 23:30:15 cedk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/openvpn/ChangeLog,v 1.167 2009/10/10 23:48:18 cedk Exp $
+
+  10 Oct 2009; Cédric Krier <cedk@gentoo.org> openvpn-2.1_rc20.ebuild,
+  metadata.xml:
+  Add eurephia patch for bug #272079
 
 *openvpn-2.1_rc20 (10 Oct 2009)
 
