--- a/sys-libs/ncurses/ChangeLog
+++ b/sys-libs/ncurses/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ncurses
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.163 2009/06/24 19:42:12 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.164 2009/10/11 05:38:15 vapier Exp $
+
+  11 Oct 2009; Mike Frysinger <vapier@gentoo.org> ncurses-5.6-r2.ebuild:
+  Force gawk #259510 by Linubie.
 
   24 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
   ncurses-5.7-r1.ebuild, +files/ncurses-5.7-nongnu.patch:
