--- a/media-gfx/hugin/ChangeLog
+++ b/media-gfx/hugin/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/hugin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.73 2009/09/30 05:52:58 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.74 2009/10/11 09:57:16 maekke Exp $
+
+*hugin-2009.4.0_rc1 (11 Oct 2009)
+
+  11 Oct 2009; Markus Meier <maekke@gentoo.org> +hugin-2009.4.0_rc1.ebuild:
+  version bump
 
 *hugin-2009.2.0 (30 Sep 2009)
 
