--- a/x11-apps/showfont/ChangeLog
+++ b/x11-apps/showfont/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/showfont
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/showfont/ChangeLog,v 1.21 2009/10/09 20:35:30 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/showfont/ChangeLog,v 1.22 2009/10/11 10:58:19 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> ChangeLog:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org> showfont-1.0.2.ebuild:
   arm stable, bug #282290
