--- a/x11-libs/libFS/ChangeLog
+++ b/x11-libs/libFS/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libFS
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libFS/ChangeLog,v 1.36 2009/10/09 21:38:11 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libFS/ChangeLog,v 1.37 2009/10/11 10:54:42 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> libFS-1.0.2.ebuild:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org> libFS-1.0.2.ebuild:
   arm stable, bug #282290
