--- a/media-fonts/font-misc-ethiopic/ChangeLog
+++ b/media-fonts/font-misc-ethiopic/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/font-misc-ethiopic
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/font-misc-ethiopic/ChangeLog,v 1.25 2009/10/09 20:12:56 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/font-misc-ethiopic/ChangeLog,v 1.26 2009/10/11 10:59:06 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org>
+  font-misc-ethiopic-1.0.0-r1.ebuild:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org>
   font-misc-ethiopic-1.0.0-r1.ebuild:
