--- a/media-fonts/font-xfree86-type1/ChangeLog
+++ b/media-fonts/font-xfree86-type1/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/font-xfree86-type1
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/font-xfree86-type1/ChangeLog,v 1.29 2009/10/09 20:13:58 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/font-xfree86-type1/ChangeLog,v 1.30 2009/10/11 10:59:35 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> font-xfree86-type1-1.0.1.ebuild:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org>
   font-xfree86-type1-1.0.1.ebuild:
