--- a/x11-libs/libXext/ChangeLog
+++ b/x11-libs/libXext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXext
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.62 2009/10/09 21:54:32 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.63 2009/10/11 11:04:32 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> libXext-1.0.5.ebuild:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org> libXext-1.0.5.ebuild:
   arm stable, bug #282290
