--- a/x11-apps/xbacklight/ChangeLog
+++ b/x11-apps/xbacklight/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xbacklight
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xbacklight/ChangeLog,v 1.17 2009/10/09 22:12:26 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xbacklight/ChangeLog,v 1.18 2009/10/11 11:15:53 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> xbacklight-1.1.ebuild:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org> xbacklight-1.1.ebuild:
   arm stable, bug #282290
