--- a/x11-apps/xdm/ChangeLog
+++ b/x11-apps/xdm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xdm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.102 2009/10/09 20:43:40 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.103 2009/10/11 11:17:26 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> xdm-1.1.9.ebuild:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org> xdm-1.1.9.ebuild:
   arm stable, bug #282290
