--- a/x11-apps/xinit/ChangeLog
+++ b/x11-apps/xinit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xinit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.156 2009/10/09 20:21:03 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.157 2009/10/11 11:16:18 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> ChangeLog:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org> xinit-1.0.8-r10.ebuild:
   amd64/arm/x86 stable, bug #287913
