--- a/x11-drivers/xf86-input-fpit/ChangeLog
+++ b/x11-drivers/xf86-input-fpit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-drivers/xf86-input-fpit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-fpit/ChangeLog,v 1.52 2009/10/09 21:25:04 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-fpit/ChangeLog,v 1.53 2009/10/11 11:21:30 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> xf86-input-fpit-1.3.0.ebuild:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org>
   xf86-input-fpit-1.3.0.ebuild:
