--- a/x11-drivers/xf86-video-nv/ChangeLog
+++ b/x11-drivers/xf86-video-nv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-drivers/xf86-video-nv
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-nv/ChangeLog,v 1.83 2009/10/05 13:53:09 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-nv/ChangeLog,v 1.84 2009/10/11 11:26:56 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> xf86-video-nv-2.1.14.ebuild:
+  ppc stable #282290
 
   05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
   xf86-video-nv-2.1.14.ebuild:
