--- a/x11-drivers/xf86-video-sisusb/ChangeLog
+++ b/x11-drivers/xf86-video-sisusb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-drivers/xf86-video-sisusb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-sisusb/ChangeLog,v 1.41 2009/10/09 21:35:52 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-sisusb/ChangeLog,v 1.42 2009/10/11 11:29:25 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> xf86-video-sisusb-0.9.3.ebuild:
+  ppc stable #282290
 
   09 Oct 2009; Markus Meier <maekke@gentoo.org>
   xf86-video-sisusb-0.9.3.ebuild:
