--- a/x11-apps/xinit/ChangeLog
+++ b/x11-apps/xinit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xinit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.158 2009/10/11 15:32:43 klausman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.159 2009/10/11 16:54:03 jer Exp $
+
+  11 Oct 2009; Jeroen Roovers <jer@gentoo.org> xinit-1.0.8-r10.ebuild:
+  Stable for HPPA (bug #287913).
 
   11 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
   xinit-1.0.8-r10.ebuild:
