--- a/app-office/lyx/ChangeLog
+++ b/app-office/lyx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/lyx
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/lyx/ChangeLog,v 1.178 2009/10/06 18:47:58 ayoy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/lyx/ChangeLog,v 1.179 2009/10/11 19:52:40 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> lyx-1.6.4.ebuild:
+  ppc stable #288215
 
   06 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> lyx-1.5.7.ebuild,
   lyx-1.6.2.ebuild, lyx-1.6.3.ebuild, lyx-1.6.4.ebuild:
